--- a/src/main/resources/templates/websocket.html
+++ b/src/main/resources/templates/websocket.html
@@ -15,10 +15,17 @@
 <body>
 <div class="container">
     <div class="page-header" id="tou">webSocket及时聊天Demo程序</div>
+    <table border="2" id="tab" style="display: none">
+        <tr>
+            <th>昵称</th>
+        </tr>
+        <tbody id="tabbody"></tbody>
+
+    </table>
     <p class="text-right" id="logout">
         <button class="btn btn-danger" id="logout-btn">退出</button>
     </p>
-    <div class="well" id="msg"></div>
+    <div class="well" id="msg" style="height: 200px;width: 600px"></div>
     <div class="col-lg">
         <div class="input-group">
             <input type="text" class="form-control" placeholder="发送信息..." id="message"> <span class="input-group-btn">
@@ -63,9 +70,18 @@
                 $("#send").prop("disabled", "");
                 $("#connection-btn").prop("disabled", "disabled");
                 $("#logout").show();
+                $("#tab").show();
             };
             websocket.onmessage = function(evnt) {
                 $("#msg").html($("#msg").html() + "<br/>" + evnt.data);
+                if(JSON.parse(evnt.data)){
+                    var list=JSON.parse(evnt.data).result;
+                    var html="";
+                    for(var i=0;i<list.length;i++){
+                        html+="<tr><td>"+list[i]+"</td></tr>"
+                    }
+                }
+                $("#tabbody").empty().append(html);
             };
             websocket.onerror = function(evnt) {
                 $("#tou").html("报错!")
